--- a/index.html
+++ b/index.html
@@ -1,12 +1,263 @@
 <!DOCTYPE html>
 <html>
+
 	<head>
 		<meta charset="utf-8">
+		<title>轻松游</title>
+		<link rel="stylesheet" href="css/indexmain.css" type="text/css" />
+		<script type="text/javascript" src="js/getdata.js"></script>
+		<link rel="stylesheet" href="css/mainnav.css" type="text/css" />
+		<script type="text/javascript" src="js/jquery-1.11.3.js" ></script>
 		
-		<title></title>
+		
 	</head>
-	<frameset  frameborder="NO" border="0" rows="108px,*">
-		<frame src="nav.html" scrolling="no" />
-		<frame src="indexmain.html"/>
-	</frameset>
+
+	<body>
+	<!--
+        	作者：452202586@qq.com
+        	时间：2015-05-22
+        	描述：这里是导航栏部分
+        -->
+		<div id="banner">
+			<div id="bannercontainer">
+				<div id="bannercontainerchild1">
+					<div class="Logo">
+						<img src="img/images/Logo_03.png " />
+					</div>
+					<div id="SEtxt">
+						<div id="SEtxtLeft"></div><div id="SEtxtMain">
+							<input id="inputss" type="text" value="目的地/景点/特产" />
+						</div><div id="SEtxtRight"></div>
+					</div>
+					<div class="Log"><a href="">注册</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="">登录</a>&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;<a href=""><span></span>&nbsp;手机应用</a>
+					</div>
+				</div>
+			</div>
+			<div class="blueline"></div>
+			<!----下面是导航栏---->
+			<div>
+				<nav id="mynavigation">
+					<ul id="mynavigationid">
+						<li><a href="index.html">首页</a>&nbsp;&nbsp;&nbsp;|</li>
+						<li>&nbsp;<a href="mudidi.html">目的地</a>&nbsp;&nbsp;&nbsp;|</li>
+						<li>&nbsp;<a href="">机票</a>&nbsp;&nbsp;&nbsp;|</li>
+						<li>&nbsp;<a href="">酒店</a>&nbsp;&nbsp;&nbsp;|</li>
+						<li>&nbsp;<a href="">特产</a>&nbsp;&nbsp;&nbsp;|</li>
+						<li>&nbsp;<a href="">行程规划</a>
+						</li>
+					</ul>
+				</nav>
+				<div class="hengxian"></div>
+			</div>
+		</div>
+
+		<!--
+	作者：452202586@qq.com
+	时间：2015-05-25
+	描述：这里是整个页面的主题部分
+	-->
+		<div id="main">
+			<!--
+        	作者：452202586@qq.com
+        	时间：2015-05-25
+        	描述：这里是页面的左侧部分
+        -->
+			<div id="mainleft">
+				<!--
+            	作者：452202586@qq.com
+            	时间：2015-05-25
+            	描述：从上往下  依次是轮转图、热门推荐、广告banner、周边旅游
+            -->
+				<!----这里存放图片以及文字介绍-->
+				<div id="focuspiciframe">
+					<iframe src="piczhuan.html" frameborder="NO" border="0" scrolling="no"></iframe>
+				</div>
+				<!--热门推荐-->
+				<div id="hot">
+					<div class="title">
+						<span>热门推荐</span>
+					</div>
+					<div class="hotpic">
+						<div class="hotpic1">
+							<div>
+								<img/>
+							</div>
+							<div></div>
+							<div></div>
+						</div>
+						<div class="hotpicright">
+							<div>
+								<div class="hotpic2">
+									<div>
+										<img/>
+									</div>
+									<div></div>
+									<div></div>
+								</div>
+								<div class="hotpic3">
+									<div>
+										<img/>
+									</div>
+									<div></div>
+									<div></div>
+								</div>
+							</div>
+							<div>
+								<div class="hotpic4">
+									<div>
+										<img/>
+									</div>
+									<div></div>
+									<div></div>
+								</div>
+								<div class="hotpic5">
+									<div>
+										<img/>
+									</div>
+									<div></div>
+									<div></div>
+								</div>
+							</div>
+						</div>
+						<!------------------------->
+					</div>
+				</div>
+				<!----接下来是广告--->
+				<div class="guanggao1"></div>
+				<script>
+					var guanggao1 = document.getElementsByClassName("guanggao1")[0];
+					guanggao1.onclick = function() {
+						window.open("http://isilk.taobao.com/?spm=2013.1.1000126.3.jmBOW7", "top = 100")
+					}
+				</script>
+				<!--接下来就是周围景区了-->
+				<div id="zhoubian">
+					<div class="title">
+						<span>周边旅游</span>
+					</div>
+					<div class="zhoubianpicdiv">
+						<div class="zhoubianpic1">
+							<div>
+								<img/>
+							</div>
+							<div></div>
+							<div></div>
+						</div>
+						<div class="zhoubianpicright">
+							<div>
+								<div class="zhoubianpic2">
+									<div>
+										<img/>
+									</div>
+									<div></div>
+									<div></div>
+								</div>
+								<div class="zhoubianpic3">
+									<div>
+										<img/>
+									</div>
+									<div></div>
+									<div></div>
+								</div>
+							</div>
+							<div>
+								<div class="zhoubianpic4">
+									<div>
+										<img/>
+									</div>
+									<div></div>
+									<div></div>
+								</div>
+								<div class="zhoubianpic5">
+									<div>
+										<img/>
+									</div>
+									<div></div>
+									<div></div>
+								</div>
+							</div>
+						</div>
+						<div class="zhoubianpicbottom">
+							<div class="zhoubianpic6">
+								<div>
+									<img/>
+								</div>
+								<div></div>
+								<div></div>
+							</div>
+							<div class="zhoubianpic7">
+								<div>
+									<img/>
+								</div>
+								<div></div>
+								<div></div>
+							</div>
+							<div class="zhoubianpic8">
+								<div>
+									<img/>
+								</div>
+								<div></div>
+								<div></div>
+							</div>
+							<div class="zhoubianpic9">
+								<div>
+									<img/>
+								</div>
+								<div></div>
+								<div></div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<script type="text/javascript" src="js/indexmain/indexmainhot.js"></script>
+				<script type="text/javascript" src="js/indexmain/zhoubian.js" ></script>
+				
+				<!--
+    	作者：452202586@qq.com
+    	时间：2015-05-25
+    	描述：这里是网页的右侧部分
+ 		-->
+			</div>
+			<div id="mainright">
+				<div class="kuaijiedaohang">
+					<ul>
+						<li><a href="">周围景色</a></li><hr />
+						<li><a href="">热门城市</a></li><hr />
+						<li><a href="">热门景区</a></li><hr />
+						<li><a href="">当季景色</a></li><hr />
+						<li><a href="">优质特产</a></li><hr />
+						<li><a href="">旅行服务</a></li><hr />
+					</ul>
+				</div>
+				<!---广告部分--->
+				<div class="guanggao2"></div>
+				<script>
+					var guanggao2 = document.getElementsByClassName("guanggao2")[0];
+					guanggao2.onclick = function() {
+						window.open("http://detail.tmall.com/item.htm?spm=a230r.1.14.1.3CSl30&id=42812399899&cm_id=140105335569ed55e27b&abbucket=12", "top = 100")
+					}
+				</script>
+			</div>
+			<!----这是下方的广告栏----->
+			<div class="guanggao3"></div>
+			<script>
+					var guanggao3 = document.getElementsByClassName("guanggao3")[0];
+					guanggao3.onclick = function() {
+						window.open("http://detail.tmall.com/item.htm?spm=a230r.1.14.1.OszdiU&id=13161654227&cm_id=140105335569ed55e27b&abbucket=12", "top = 100")
+					}
+			</script>
+		</div>
+		<!-----下面的是网页的底-------->
+		<div class="bottom">
+			<ul>
+				<li>不知道写啥</li>
+				<li>不知道写啥</li>
+				<li>不知道写啥</li>
+				<li>不知道写啥</li>
+				<li>不知道写啥</li>
+			</ul>
+		</div>
+	</body>
+<script type="text/javascript" src="js/inputCom.js" ></script>
+		<script type="text/javascript" src="js/main.js" ></script>
 </html>
