--- a/jingdian.html
+++ b/jingdian.html
@@ -2,15 +2,17 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>这里是目的地界面</title>
-		<link rel="stylesheet" href="css/mudidiindex.css" type="text/css" />
-		<script type="text/javascript" src="js/jquery-1.11.3.js" ></script>
-		<script type="text/javascript" src="js/mudidimain/mudidimain.js" ></script>
+		<title>具体景点信息</title>
 		<link rel="stylesheet" href="css/mainnav.css" type="text/css" />
+		<link rel="stylesheet" href="css/jingdianindex.css" />
+		<script type="text/javascript" src="js/jquery-1.11.3.js" ></script>
+		<script type="text/javascript" src="js/getSkippinginfo.js" ></script>
+		<script type="text/javascript" src="js/PicMove.js" ></script>
+		<script type="text/javascript" src="js/getdata.js" ></script>
+		<script type="text/javascript" src="js/jingdianmain/jingdianindex.js" ></script>
 	
 	</head>
 	<body>
-		
 		<div id="banner">
 			<div id="bannercontainer">
 				<div id="bannercontainerchild1">
@@ -43,47 +45,39 @@
 				<div class="hengxian"></div>
 			</div>
 		</div>
+		<!----------------主体部分------------------>
+		<div id = main>
+			<div id="leftmain">
+				<div id="jingdianinfo">
+					<div id="jingdianpic"></div><div id="jingdiantxtinfo">
+						<div id="jingdianname"></div>
+						<div id="jingdianjieshao"></div>
+						<div id="menpiao">暂无数据</div>
+						<div id="wangji">旺季时间：暂无数据</div>
+						<div id="danjiji">淡季时间：暂无数据</div>
+						<div id="dianhua"></div>
+					</div>
+					<div id="jingdianxiangxi"></div>
+				</div>
+				<div>
+					
+				</div>
+			</div>
+			<div id="jiangexian">
+					
+				</div>
+			<div id="rightmain">
+				<div id="guihuaform">
+						<div><img  src="img/gg/images/tupian1.png" /></div>
+						<div><img  src="img/1.jpg" /></div>
+						<div><img  src="img/13.jpg" /></div>
+					</div>
+			</div>
+		</div>
 		
-		<!--------------------------------->
-		<div id="container">
-			<!----放置地图的iframe--->
-			<div id="map">
-				<iframe src="mywebmap/mywebmap.html" width="980" height="380" border="none" scrolling="no" frameborder="NO"></iframe>
-			</div>
-			<!---放置当季旅行的--->
-			<div id="curjijie">
-				<div id="title">
-					<span>当季旅游</span>
-				</div>
-				<div id="picinfo">
-					<!--图片展示-->
-					<div class="picdiv"></div>
-					<div class="picdiv"></div>
-				</div>
-			</div>
-			<!-------放置广告---------->
-			<div>
-				<div class="guanggao1"></div>
-				<script>
-					var guanggao1 = document.getElementsByClassName("guanggao1")[0];
-					guanggao1.onclick = function() {
-						window.open("http://isilk.taobao.com/?spm=2013.1.1000126.3.jmBOW7", "top = 100")
-					}
-				</script>
-			</div>
-			
-			<!-------------xiabu--------------->
-			<div class="bottom">
-			<ul>
-				<li>不知道写啥</li>
-				<li>不知道写啥</li>
-				<li>不知道写啥</li>
-				<li>不知道写啥</li>
-				<li>不知道写啥</li>
-			</ul>
-		</div>
-			
-		</div>
+		
+		
+		
 	</body>
 		<script type="text/javascript" src="js/inputCom.js" ></script>
 		<script type="text/javascript" src="js/main.js" ></script>
